[package]
name = "mountpoints"
version = "0.1.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]
repository = "https://github.com/Speedy37/mountpoints-rs"
license = "MIT OR Apache-2.0"
edition = "2018"
description = """
List mount points (windows, linux, ...)
"""

[target.'cfg(target_os  = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "handleapi",
    "fileapi",
    "winerror",
    "impl-default",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "0.2.93" }
